--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,134 @@ header {
         width: 500px;
     }
 }
+
+ /* move from / to and fade */
+
+.pt-page-moveToLeftFade {
+    -webkit-animation: moveToLeftFade .7s ease both;
+    animation: moveToLeftFade .7s ease both;
+}
+
+.pt-page-moveFromLeftFade {
+    -webkit-animation: moveFromLeftFade .7s ease both;
+    animation: moveFromLeftFade .7s ease both;
+}
+
+.pt-page-moveToRightFade {
+    -webkit-animation: moveToRightFade .7s ease both;
+    animation: moveToRightFade .7s ease both;
+}
+
+.pt-page-moveFromRightFade {
+    -webkit-animation: moveFromRightFade .7s ease both;
+    animation: moveFromRightFade .7s ease both;
+} 
+
+
+.pt-perspective {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    perspective: 1200px;
+    transform-style: preserve-3d;
+}
+
+.pt-page {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    /*visibility: hidden;*/
+    overflow: hidden;
+    backface-visibility: hidden;
+    transform: translate3d(0, 0, 0);
+}
+
+/*.pt-page-current,
+.no-js .pt-page {
+    visibility: visible;
+}
+
+.no-js body {
+    overflow: auto;
+}*/
+
+.pt-page-ontop {
+    z-index: 999;
+}
+
+
+/********************************* keyframes **************************************/
+
+/* move from / to  */
+
+/*@-webkit-keyframes moveToLeft {
+    from { }
+    to { -webkit-transform: translateX(-100%); }
+}
+@keyframes moveToLeft {
+    from { }
+    to { -webkit-transform: translateX(-100%); transform: translateX(-100%); }
+}
+
+@-webkit-keyframes moveFromLeft {
+    from { -webkit-transform: translateX(-100%); }
+}
+@keyframes moveFromLeft {
+    from { -webkit-transform: translateX(-100%); transform: translateX(-100%); }
+}
+
+@-webkit-keyframes moveToRight { 
+    from { }
+    to { -webkit-transform: translateX(100%); }
+}
+@keyframes moveToRight { 
+    from { }
+    to { -webkit-transform: translateX(100%); transform: translateX(100%); }
+}
+
+@-webkit-keyframes moveFromRight {
+    from { -webkit-transform: translateX(100%); }
+}
+@keyframes moveFromRight {
+    from { -webkit-transform: translateX(100%); transform: translateX(100%); }
+}
+*/
+
+
+/* move from / to and fade */
+
+@-webkit-keyframes moveToLeftFade {
+    from { }
+    to { opacity: 0.3; -webkit-transform: translateX(-100%); }
+}
+@keyframes moveToLeftFade {
+    from { }
+    to { opacity: 0.3; -webkit-transform: translateX(-100%); transform: translateX(-100%); }
+}
+
+@-webkit-keyframes moveFromLeftFade {
+    from { opacity: 0.3; -webkit-transform: translateX(-100%); }
+}
+@keyframes moveFromLeftFade {
+    from { opacity: 0.3; -webkit-transform: translateX(-100%); transform: translateX(-100%); }
+}
+
+@-webkit-keyframes moveToRightFade {
+    from { }
+    to { opacity: 0.3; -webkit-transform: translateX(100%); }
+}
+@keyframes moveToRightFade {
+    from { }
+    to { opacity: 0.3; -webkit-transform: translateX(100%); transform: translateX(100%); }
+}
+
+@-webkit-keyframes moveFromRightFade {
+    from { opacity: 0.3; -webkit-transform: translateX(100%); }
+}
+@keyframes moveFromRightFade {
+    from { opacity: 0.3; -webkit-transform: translateX(100%); transform: translateX(100%); }
+}
+
+
