--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,9 +1,17 @@
 
+* {
+margin: 0;
+padding: 0;
+}
 
 @media only screen and (min-width: 600px) {
 
 	body {background-color: #FFFCD7;}
-	#story {width: 20%;}
+	#story {width: 20%;
+		color: red;
+
+
+	}
 
 }
 
@@ -11,7 +19,7 @@
 
 	body {background-color: #FFFB83;}
 	map  {width: 80%;}
-	#story {width: 500px;}
+/*	#story {width: 500px;}*/
 }
 
 	#coords  {
@@ -30,29 +38,42 @@
     			}
 
   #story  {
-			 		display: inline-block;
+			 	display: inline;
+			 	list-style-type: none;
+			 	overflow-x:none;
+
+/*padding-right: 20px;*/
 			  		/*position: fixed;*/
-			 		background-color: teal;
+		/*	 	background-color: teal;
 			 		color: white;
-			  		height: 280px;
+			  		height: 280px;*/
 			  		/*width: 240px;*/
-			  		right: 5px;
+			  	/*	right: 5px;
 			  		padding: 10px;
 			  		font-family: Roboto, Arial, "sans serif";
 			  		line-height: 200%;
 			  		text-align: center;
 			  		border-radius: 25px;
     				border: 2px solid #73AD21;
-    				overflow-y: scroll;
+    				overflow-y: scroll;*/*/
 		
   				}
 
-
+  ul {
+ white-space: nowrap;
+ overflow-x: scroll;
+ width: 400px;
+ background: white;
+}
 
    #story li    {
-
+	display: inline-block;
   	list-style: none;
+ 
+  	font-size: 24px;
    }
+
+
 
    #story li:hover     {
 
@@ -75,16 +96,24 @@ text-shadow: 2px 2px white;
 
 
 #info {
-	right; 5px;
+/*	right; 5px;*/
 	display: inline-block;
-	background-color:lightgray;
-	width: 22%;
+/*	background-color:lightgray; */
+	width: 100%;
 	height: 300px;
-	border: 2px solid #73AD21;
+/*	border: 2px solid #73AD21; */
+background: rgb(178,225,255); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(178,225,255,1) 0%, rgba(102,182,252,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, rgba(178,225,255,1) 0%,rgba(102,182,252,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, rgba(178,225,255,1) 0%,rgba(102,182,252,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2e1ff', endColorstr='#66b6fc',GradientType=0 ); /* IE6
 
 
-	
+
 }
 
 
 }
+
+
+
