Added favicon, background images for desktop, experimenting with full width layouts

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ header {
 	#map {
 	    display: inline-block;
 	    position: fixed;
+        height: 240px;
 	}
 	}
 @media only screen and (min-width: 1000px) {
